--- a/index.html
+++ b/index.html
@@ -4,33 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://assets.ubuntu.com/v1/vanilla-framework-version-4.9.0.min.css" />
-    <title>Document</title>
+    <title>Chris Maynard Ampon</title>
 </head>
 <body>
     <header id="navigation" class="p-navigation">
         <div class="p-navigation__row--full-width">
-            <div class="p-navigation__banner">
-                <div class="p-navigation__tagged-logo">
-                    <a class="p-navigation__link" href="#">
-                    <div class="p-navigation__logo-tag">
-                        <img class="p-navigation__logo-icon" src="https://assets.ubuntu.com/v1/82818827-CoF_white.svg" alt="">
-                    </div>
-                    <span class="p-navigation__logo-title">Ubuntu</span>
-                    </a>
-                </div>
-                <a href="#navigation" class="p-navigation__toggle--open" title="menu">Menu</a>
-                <a href="#navigation-closed" class="p-navigation__toggle--close" title="close menu">Close menu</a>
-            </div>
-            <nav class="p-navigation__nav" aria-label="Example of full-width main">
+            <nav class="p-navigation__nav u-align--right" aria-label="Example of full-width main">
                 <ul class="p-navigation__items">
                     <li class="p-navigation__item is-selected">
-                    <a class="p-navigation__link" href="#">Products</a>
+                        <a class="p-navigation__link" href="#">Products</a>
                     </li>
                     <li class="p-navigation__item">
-                    <a class="p-navigation__link" href="#">Services</a>
+                        <a class="p-navigation__link" href="#">Services</a>
                     </li>
                     <li class="p-navigation__item">
-                    <a class="p-navigation__link" href="#">Partners</a>
+                        <a class="p-navigation__link" href="#">Partners</a>
                     </li>
                 </ul>
             </nav>
