Update header and add profile section

--- a/index.html
+++ b/index.html
@@ -6,23 +6,39 @@
     <link rel="stylesheet" href="https://assets.ubuntu.com/v1/vanilla-framework-version-4.9.0.min.css" />
     <title>Chris Maynard Ampon</title>
 </head>
-<body>
-    <header id="navigation" class="p-navigation">
+<body class="is-paper">
+    <header id="navigation" class="p-navigation is-dark">
         <div class="p-navigation__row--full-width">
             <nav class="p-navigation__nav u-align--right" aria-label="Example of full-width main">
                 <ul class="p-navigation__items">
                     <li class="p-navigation__item is-selected">
-                        <a class="p-navigation__link" href="#">Products</a>
+                        <a class="p-navigation__link" href="#">About</a>
                     </li>
                     <li class="p-navigation__item">
-                        <a class="p-navigation__link" href="#">Services</a>
+                        <a class="p-navigation__link" href="#">Education</a>
                     </li>
                     <li class="p-navigation__item">
-                        <a class="p-navigation__link" href="#">Partners</a>
+                        <a class="p-navigation__link" href="#">Projects</a>
+                    </li>
+                    <li class="p-navigation__item">
+                        <a class="p-navigation__link" href="#">Skills</a>
                     </li>
                 </ul>
             </nav>
         </div>
     </header>
+    <div class="p-strip u-vertically-center">
+    <section class="p-strip u-image-position">
+            <div class="row">
+                <div class="col-4 u-align--right">
+                    <img src="/profile.png" alt="profile" class="p-image--bordered" style="width: 200px; height: 200px;">
+                </div>
+                <div class="col-8" style="border: 1px solid black;">
+                    <h1 class="p-heading--1">Chris Maynard Ampon</h1>
+                    <p class="p-paragraph">I am a full stack developer with a passion for creating web applications.</p>
+                </div>
+            </div>
+    </section>
+    </div>
 </body>
 </html>
