--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <section class="p-strip u-image-position">
             <div class="row">
                 <div class="col-4 u-align--right">
-                    <img src="/profile.png" alt="profile" class="p-image--bordered" style="width: 200px; height: 200px;">
+                    <img src="profile.png" alt="profile" class="p-image--bordered" style="width: 200px; height: 200px;">
                 </div>
                 <div class="col-8" style="border: 1px solid black;">
                     <h1 class="p-heading--1">Chris Maynard Ampon</h1>
