--- a/index.html
+++ b/index.html
@@ -33,9 +33,16 @@
                 <div class="col-4 u-align--right">
                     <img src="profile.png" alt="profile" class="p-image--bordered" style="width: 200px; height: 200px;">
                 </div>
-                <div class="col-8" style="border: 1px solid black;">
-                    <h1 class="p-heading--1">Chris Maynard Ampon</h1>
-                    <p class="p-paragraph">I am a full stack developer with a passion for creating web applications.</p>
+                <div class="col-8 row u-vertically-center" style="border: 1px solid black;">
+                    <h1 class="p-heading--1 u-no-margin is-accent " style="border: 1px solid black;">CHRIS MAYNARD AMPON</h1>
+                    <p class="p-heading--4 p-text--small-caps u-no-margin--top u-no-padding" style="border: 1px solid black;">Jacinto St., Davao City</p>
+                    <p class="p-text--small-caps" style="border: 1px solid black;">I am a full stack developer with a passion for creating web applications.</p>
+                    <a class="p-icon--github col-1" href="https://github.com/canonical/vanilla-framework/">GitHub</a>
+                    <a class="p-icon--twitter col-1" href="https://twitter.com/vanillaframewrk">Twitter</a>
+                    <a class="p-icon--facebook col-1" href="https://github.com/canonical/vanilla-framework/">GitHub</a>
+                    <a class="p-icon--linkedin col-1" href="https://twitter.com/vanillaframewrk">Twitter</a>
+                    <a class="p-icon--instagram col-1" href="https://github.com/canonical/vanilla-framework/">GitHub</a>
+                    <a class="p-icon--youtube col-1" href="https://twitter.com/vanillaframewrk">Twitter</a>
                 </div>
             </div>
     </section>
