Update body class and add footer to index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="https://assets.ubuntu.com/v1/vanilla-framework-version-4.9.0.min.css" />
     <title>Chris Maynard Ampon</title>
 </head>
-<body class="is-paper">
+<body class="is-light">
+    <div class="l-site">
     <header id="navigation" class="p-navigation is-dark">
         <div class="p-navigation__row--full-width">
             <nav class="p-navigation__nav u-align--right" aria-label="Example of full-width main">
@@ -30,7 +31,7 @@
     <div class="p-strip u-vertically-center">
     <section class="p-strip u-image-position">
             <div class="row">
-                <div class="col-4 u-align--right">
+                <div class="col-4 u-align--right p-image">
                     <img src="profile.png" alt="profile" class="p-image--bordered" style="width: 200px; height: 200px;">
                 </div>
                 <div class="col-8 row u-vertically-center" style="border: 1px solid black;">
@@ -46,6 +47,16 @@
                 </div>
             </div>
     </section>
+    </div>
+
+    <footer class="l-footer--sticky p-strip--highlighted">
+        <nav class="row" aria-label="Footer">
+          <div class="has-cookie u-align--right">
+            <span>&copy; 2024 Chris Maynard Ampon. All rights reserved.</span>
+            <span class="u-off-screen" style="border: 1px solid black;"><a href="#">Go to the top of the page</a></span>
+          </div>
+        </nav>
+      </footer>
     </div>
 </body>
 </html>
