--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="is-light">
     <div class="l-site">
-    <header id="navigation" class="p-navigation is-dark">
+    <header id="navigation" class="p-navigation is-dark" style="position: sticky; top: 0;">
         <div class="p-navigation__row--full-width">
             <nav class="p-navigation__nav u-align--right" aria-label="Example of full-width main">
                 <ul class="p-navigation__items">
@@ -16,7 +16,7 @@
                         <a class="p-navigation__link" href="#">About</a>
                     </li>
                     <li class="p-navigation__item">
-                        <a class="p-navigation__link" href="#">Education</a>
+                        <a class="p-navigation__link" href="#education">Education</a>
                     </li>
                     <li class="p-navigation__item">
                         <a class="p-navigation__link" href="#">Projects</a>
@@ -48,12 +48,30 @@
             </div>
     </section>
     </div>
-
-    <footer class="l-footer--sticky p-strip--highlighted">
+    <section class="p-strip" id="education">
+        <div class="row">
+            <div class="col-12">
+                <h2 class="p-heading--2">Education</h2>
+                <ul class="p-list--unstyled">
+                    <li>
+                        <h3 class="p-heading--3">Bachelor of Science in Computer Science</h3>
+                        <p class="p-text--small-caps">University of XYZ</p>
+                        <p class="p-text--small">Graduated in 2022</p>
+                    </li>
+                    <li>
+                        <h3 class="p-heading--3">Diploma in Web Development</h3>
+                        <p class="p-text--small-caps">Online Course</p>
+                        <p class="p-text--small">Completed in 2021</p>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </section>
+    <footer class="l-footer--sticky p-strip--highlighted" >
         <nav class="row" aria-label="Footer">
           <div class="has-cookie u-align--right">
             <span>&copy; 2024 Chris Maynard Ampon. All rights reserved.</span>
-            <span class="u-off-screen" style="border: 1px solid black;"><a href="#">Go to the top of the page</a></span>
+            <span class="u-off-screen"><a href="#">Go to the top of the page</a></span>
           </div>
         </nav>
       </footer>
