Update social media links in index.html

--- a/index.html
+++ b/index.html
@@ -32,18 +32,18 @@
     <section class="p-strip u-image-position">
             <div class="row">
                 <div class="col-4 u-align--right p-image">
-                    <img src="profile.png" alt="profile" class="p-image--bordered" style="width: 200px; height: 200px;">
+                    <img src="profile.png" alt="profile" class="p-image--bordered" style="width: 200px; height: 200px; border-radius: 50%;">
                 </div>
                 <div class="col-8 row u-vertically-center" style="border: 1px solid black;">
                     <h1 class="p-heading--1 u-no-margin is-accent " style="border: 1px solid black;">CHRIS MAYNARD AMPON</h1>
                     <p class="p-heading--4 p-text--small-caps u-no-margin--top u-no-padding" style="border: 1px solid black;">Jacinto St., Davao City</p>
                     <p class="p-text--small-caps" style="border: 1px solid black;">I am a full stack developer with a passion for creating web applications.</p>
-                    <a class="p-icon--github col-1" href="https://github.com/canonical/vanilla-framework/">GitHub</a>
-                    <a class="p-icon--twitter col-1" href="https://twitter.com/vanillaframewrk">Twitter</a>
-                    <a class="p-icon--facebook col-1" href="https://github.com/canonical/vanilla-framework/">GitHub</a>
-                    <a class="p-icon--linkedin col-1" href="https://twitter.com/vanillaframewrk">Twitter</a>
-                    <a class="p-icon--instagram col-1" href="https://github.com/canonical/vanilla-framework/">GitHub</a>
-                    <a class="p-icon--youtube col-1" href="https://twitter.com/vanillaframewrk">Twitter</a>
+                    <a class="p-icon--github col-1" href="https://github.com/chrismaynardampon" target="_blank">GitHub</a>
+                    <a class="p-icon--twitter col-1" href="https://twitter.com/Hearteu02" target="_blank">Twitter</a>
+                    <a class="p-icon--facebook col-1" href="https://www.facebook.com/Hearteu02" target="_blank">Facebook</a>
+                    <a class="p-icon--linkedin col-1" href="https://www.linkedin.com/in/chris-maynard-ampon-0554aa256/" target="_blank">LinkedIn</a>
+                    <a class="p-icon--instagram col-1" href="https://www.instagram.com/hearteu02/" target="_blank">Instagram</a>
+                    <a class="p-icon--youtube col-1" href="https://www.youtube.com/@Hearteu02" target="_blank">Youtube</a>
                 </div>
             </div>
     </section>
