Add smooth scrolling and navigation link

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="scroll-behavior: smooth;">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,6 +11,11 @@
     <header id="navigation" class="p-navigation is-dark" style="position: sticky; top: 0;">
         <div class="p-navigation__row--full-width">
             <nav class="p-navigation__nav u-align--right" aria-label="Example of full-width main">
+                <ul class="p-navigation__items" style="position: relative; right: 900px;">
+                    <li class="p-navigation__item">
+                        <a class="p-navigation__link" href="#">Hearteu</a>
+                    </li>
+                </ul>
                 <ul class="p-navigation__items">
                     <li class="p-navigation__item is-selected">
                         <a class="p-navigation__link" href="#">About</a>
@@ -32,12 +37,14 @@
     <section class="p-strip u-image-position">
             <div class="row">
                 <div class="col-4 u-align--right p-image">
-                    <img src="profile.png" alt="profile" class="p-image--bordered" style="width: 200px; height: 200px; border-radius: 50%;">
+                    <img src="profile.png" alt="profile" class="p-image--bordered" style="width:300px; height: 300px; border-radius: 50%;">
                 </div>
-                <div class="col-8 row u-vertically-center" style="border: 1px solid black;">
-                    <h1 class="p-heading--1 u-no-margin is-accent " style="border: 1px solid black;">CHRIS MAYNARD AMPON</h1>
-                    <p class="p-heading--4 p-text--small-caps u-no-margin--top u-no-padding" style="border: 1px solid black;">Jacinto St., Davao City</p>
-                    <p class="p-text--small-caps" style="border: 1px solid black;">I am a full stack developer with a passion for creating web applications.</p>
+                <div class="col-8 row u-vertically-center">
+                    <h1 class="p-heading--1 u-no-margin is-accent" >CHRIS MAYNARD AMPON</h1>
+                    <h5 class="p-heading--5">BSIT 2A</h5>
+                    <p class="p-text">
+                        Hello! I'm Chris Maynard Ampon, a software engineer passionate about crafting innovative solutions. With a decade of experience and a degree from Stanford University, I specialize in full-stack development and data analytics. I thrive on collaborating with diverse teams to tackle complex challenges. Let's connect and explore how we can create something remarkable together.
+                    </p>
                     <a class="p-icon--github col-1" href="https://github.com/chrismaynardampon" target="_blank">GitHub</a>
                     <a class="p-icon--twitter col-1" href="https://twitter.com/Hearteu02" target="_blank">Twitter</a>
                     <a class="p-icon--facebook col-1" href="https://www.facebook.com/Hearteu02" target="_blank">Facebook</a>
