Update navigation links and add education section

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
                         <a class="p-navigation__link" href="#education">Education</a>
                     </li>
                     <li class="p-navigation__item">
-                        <a class="p-navigation__link" href="#">Projects</a>
+                        <a class="p-navigation__link" href="#projects">Projects</a>
                     </li>
                     <li class="p-navigation__item">
-                        <a class="p-navigation__link" href="#">Skills</a>
+                        <a class="p-navigation__link" href="#skills">Skills</a>
                     </li>
                 </ul>
             </nav>
@@ -55,25 +55,39 @@
             </div>
     </section>
     </div>
-    <section class="p-strip" id="education">
+    <hr class="p-separator" id="education">
+   
+    <section class="p-strip u-equal-height u-no-margin u-no-padding">
         <div class="row">
-            <div class="col-12">
-                <h2 class="p-heading--2">Education</h2>
-                <ul class="p-list--unstyled">
-                    <li>
-                        <h3 class="p-heading--3">Bachelor of Science in Computer Science</h3>
-                        <p class="p-text--small-caps">University of XYZ</p>
-                        <p class="p-text--small">Graduated in 2022</p>
-                    </li>
-                    <li>
-                        <h3 class="p-heading--3">Diploma in Web Development</h3>
-                        <p class="p-text--small-caps">Online Course</p>
-                        <p class="p-text--small">Completed in 2021</p>
-                    </li>
-                </ul>
+            <h2 class="p-heading--2"> Education</h2>
+            <div class="p-card col-4">
+                <h3 class="p-heading--3">Bachelor of Science in Information Technology</h3>
+                <p class="p-card__content p-text--small-caps">Ateneo de Davao University</p>
+                <p class=" p-text--small">Graduated in 2022</p>
+            </div>
+            <div class="p-card col-4">
+                <h3 class="p-heading--3">Diploma in Web Development</h3>
+                <p class="p-text--small-caps">Online Course</p>
+                <p class="p-text--small">Completed in 2021</p>
+            </div>
+            <div class="p-card col-4">
+                <h3 class="p-heading--3">Diploma in Web Development</h3>
+                <p class="p-text--small-caps">Online Course</p>
+                <p class="p-text--small">Completed in 2021</p>
+            </div>
+            <div class="p-card col-4">
+                <h3 class="p-heading--3">Diploma in Web Development</h3>
+                <p class="p-text--small-caps">Online Course</p>
+                <p class="p-text--small">Completed in 2021</p>
+            </div>
+            <div class="p-card col-4">
+                <h3 class="p-heading--3">Diploma in Web Development</h3>
+                <p class="p-text--small-caps">Online Course</p>
+                <p class="p-text--small">Completed in 2021</p>
             </div>
         </div>
     </section>
+    <hr class="p-separator" id="projects">
     <footer class="l-footer--sticky p-strip--highlighted" >
         <nav class="row" aria-label="Footer">
           <div class="has-cookie u-align--right">
