Update education section and remove duplicate code

--- a/index.html
+++ b/index.html
@@ -55,12 +55,42 @@
             </div>
     </section>
     </div>
-    <hr class="p-separator" id="education">
+    
    
-    <section class="p-strip u-equal-height u-no-margin u-no-padding">
+    <section class="p-strip is-dark u-equal-height" id="education">
         <div class="row">
             <h2 class="p-heading--2"> Education</h2>
-            <div class="p-card col-4">
+            <div class="p-card col-3">
+                <h3 class="p-heading--3">Bachelor of Science in Information Technology</h3>
+                <p class="p-card__content p-text--small-caps">Ateneo de Davao University</p>
+                <p class=" p-text--small">Graduated in 2022</p>
+            </div>
+            <div class="p-card col-3">
+                <h3 class="p-heading--3">Diploma in Web Development</h3>
+                <p class="p-text--small-caps">Online Course</p>
+                <p class="p-text--small">Completed in 2021</p>
+            </div>
+            <div class="p-card col-3">
+                <h3 class="p-heading--3">Diploma in Web Development</h3>
+                <p class="p-text--small-caps">Online Course</p>
+                <p class="p-text--small">Completed in 2021</p>
+            </div>
+            <div class="p-card col-3">
+                <h3 class="p-heading--3">Diploma in Web Development</h3>
+                <p class="p-text--small-caps">Online Course</p>
+                <p class="p-text--small">Completed in 2021</p>
+            </div>
+            <div class="p-card col-3">
+                <h3 class="p-heading--3">Diploma in Web Development</h3>
+                <p class="p-text--small-caps">Online Course</p>
+                <p class="p-text--small">Completed in 2021</p>
+            </div>
+        </div>
+    </section>
+    <section class="p-strip is-light" id="projects">
+        <div class="row">
+            <h2 class="p-heading--2">Projects</h2>
+            <div class="p-card col-4 is-dark">
                 <h3 class="p-heading--3">Bachelor of Science in Information Technology</h3>
                 <p class="p-card__content p-text--small-caps">Ateneo de Davao University</p>
                 <p class=" p-text--small">Graduated in 2022</p>
@@ -87,7 +117,6 @@
             </div>
         </div>
     </section>
-    <hr class="p-separator" id="projects">
     <footer class="l-footer--sticky p-strip--highlighted" >
         <nav class="row" aria-label="Footer">
           <div class="has-cookie u-align--right">
