Update body class and add comments, education section, and projects section

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://assets.ubuntu.com/v1/vanilla-framework-version-4.9.0.min.css" />
     <title>Chris Maynard Ampon</title>
 </head>
-<body class="is-light">
+<body class="is-paper">
     <div class="l-site">
     <header id="navigation" class="p-navigation is-dark" style="position: sticky; top: 0;">
         <div class="p-navigation__row--full-width">
@@ -33,6 +33,7 @@
             </nav>
         </div>
     </header>
+    <!-- about -->
     <div class="p-strip u-vertically-center">
     <section class="p-strip u-image-position">
             <div class="row">
@@ -41,7 +42,7 @@
                 </div>
                 <div class="col-8 row u-vertically-center">
                     <h1 class="p-heading--1 u-no-margin is-accent" >CHRIS MAYNARD AMPON</h1>
-                    <h5 class="p-heading--5">BSIT 2A</h5>
+                    <h5 class="p-heading--5 u-text--muted">BSIT 2A</h5>
                     <p class="p-text">
                         Hello! I'm Chris Maynard Ampon, a software engineer passionate about crafting innovative solutions. With a decade of experience and a degree from Stanford University, I specialize in full-stack development and data analytics. I thrive on collaborating with diverse teams to tackle complex challenges. Let's connect and explore how we can create something remarkable together.
                     </p>
@@ -55,34 +56,34 @@
             </div>
     </section>
     </div>
-    
-   
+   <!-- education -->
     <section class="p-strip is-dark u-equal-height" id="education">
         <div class="row">
             <h2 class="p-heading--2"> Education</h2>
             <div class="p-card col-3 ">
                 <h3 class="p-heading--3">Bachelor of Science in Information Technology</h3>
-                <p class="p-card__content p-text--small-caps">Ateneo de Davao University</p>
-                <p class=" p-text--small">Graduated in 2022</p>
+                <p class="p-text--small-caps">Ateneo de Davao University</p>
+                <p class=" p-text--small">2022 - Present</p>
             </div>
             <div class="p-card col-3">
-                <h3 class="p-heading--3">Diploma in Web Development</h3>
-                <p class="p-text--small-caps">Online Course</p>
-                <p class="p-text--small">Completed in 2021</p>
+                <h3 class="p-heading--3">Science Technology Engineering &amp; Mathematics</h3>
+                <p class="p-text--small-caps">Lyceum of the Philippines University-Cavite</p>
+                <p class="p-text--small u-align-text--small-to-default">2019 - 2021</p>
             </div>
             <div class="p-card col-3">
-                <h3 class="p-heading--3">Diploma in Web Development</h3>
-                <p class="p-text--small-caps">Online Course</p>
-                <p class="p-text--small">Completed in 2021</p>
+                <h3 class="p-heading--3">Junior High School</h3>
+                <p class="p-text--small-caps">Tagum City National HighSchool</p>
+                <p class="p-text--small">2015 - 2019</p>
             </div>
             <div class="p-card col-3">
-                <h3 class="p-heading--3">Diploma in Web Development</h3>
-                <p class="p-text--small-caps">Online Course</p>
-                <p class="p-text--small">Completed in 2021</p>
+                <h3 class="p-heading--3">Grade School</h3>
+                <p class="p-text--small-caps">Banaybanay Central Elementary School</p>
+                <p class="p-text--small">2009 - 2015</p>
             </div>
         </div>
     </section>
-    <section class="p-strip is-light" id="projects">
+    <!-- projects -->
+    <section class="p-strip" id="projects">
         <div class="row">
             <h2 class="p-heading--2">Projects</h2>
             <div class="p-card col-4 is-dark">
@@ -112,7 +113,38 @@
             </div>
         </div>
     </section>
-    <footer class="l-footer--sticky p-strip--highlighted" >
+    <!-- skills -->
+    <section class="p-strip is-dark" id="skills">
+        <div class="row">
+            <h2 class="p-heading--2">Skills</h2>
+            <div class="p-card col-4 is-dark">
+                <h3 class="p-heading--3">Bachelor of Science in Information Technology</h3>
+                <p class="p-card__content p-text--small-caps">Ateneo de Davao University</p>
+                <p class=" p-text--small">Graduated in 2022</p>
+            </div>
+            <div class="p-card col-4">
+                <h3 class="p-heading--3">Science Technology Engineering &amp; Mathematics</h3>
+                <p class="p-text--small-caps">Lyceum of the Philippines University-Cavite</p>
+                <p class="p-text--small">Completed in 2021</p>
+            </div>
+            <div class="p-card col-4">
+                <h3 class="p-heading--3">Diploma in Web Development</h3>
+                <p class="p-text--small-caps">Online Course</p>
+                <p class="p-text--small">Completed in 2021</p>
+            </div>
+            <div class="p-card col-4">
+                <h3 class="p-heading--3">Diploma in Web Development</h3>
+                <p class="p-text--small-caps">Online Course</p>
+                <p class="p-text--small">Completed in 2021</p>
+            </div>
+            <div class="p-card col-4">
+                <h3 class="p-heading--3">Diploma in Web Development</h3>
+                <p class="p-text--small-caps">Online Course</p>
+                <p class="p-text--small">Completed in 2021</p>
+            </div>
+        </div>
+    </section>
+    <footer class="l-footer--sticky p-strip is-paper" >
         <nav class="row" aria-label="Footer">
           <div class="has-cookie u-align--right">
             <span>&copy; 2024 Chris Maynard Ampon. All rights reserved.</span>
