--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://assets.ubuntu.com/v1/vanilla-framework-version-4.9.0.min.css" />
+    <script src="https://kit.fontawesome.com/ae50866481.js" crossorigin="anonymous"></script>
     <style>
         .p-navigation__items {
             position: relative;
@@ -19,6 +20,10 @@
         img {
             max-width: 100%;
             height: auto;
+        }
+        i {
+            font-size: 50px;
+            margin: 10px;
         }
     </style>
     <title>Chris Maynard Ampon</title>
@@ -105,30 +110,27 @@
     <section class="p-strip" id="projects">
         <div class="row">
             <h2 class="p-heading--2">Projects</h2>
-            <div class="p-card col-4 is-dark">
-                <h3 class="p-heading--3">Bachelor of Science in Information Technology</h3>
-                <p class="p-card__content p-text--small-caps">Ateneo de Davao University</p>
-                <p class=" p-text--small">Graduated in 2022</p>
+            <div class="p-card col-6 col-md-6 col-lg-3 u-no-padding">
+                <div class="p-card__content">
+                    <iframe class="p-card__image" style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FaG67jhgztaodHq2gZQHdXv%2FSir-Joseph-(HCI)-Exam-2%3Fpage-id%3D314%253A2743%26type%3Ddesign%26node-id%3D314-2810%26viewport%3D1035%252C-1627%252C0.12%26t%3DBicttaUQqC3lV3Nr-1%26scaling%3Dcontain%26starting-point-node-id%3D314%253A2810%26mode%3Ddesign" allowfullscreen></iframe>
+                    <div class="p-card__inner">
+                        <h3 class="p-heading--3">ECOFI Inc.</h3>
+                        <p class="p-text">One of the UI designers of the Evangelical Christian Outreach Fellowship International Incorporated (ECOFI Inc.) website, which is a Religious Institution who's passion is for God and has compassion for the lost.</p>
+                    </div>
+                <!-- <hr class="u-no-margin--bottom">
+                <div class="p-card__inner">
+                    by <a href="#">Bartek Szopka</a> on 21st August 2021
+                </div> -->
+                </div>
             </div>
-            <div class="p-card col-4">
-                <h3 class="p-heading--3">Diploma in Web Development</h3>
-                <p class="p-text--small-caps">Online Course</p>
-                <p class="p-text--small">Completed in 2021</p>
-            </div>
-            <div class="p-card col-4">
-                <h3 class="p-heading--3">Diploma in Web Development</h3>
-                <p class="p-text--small-caps">Online Course</p>
-                <p class="p-text--small">Completed in 2021</p>
-            </div>
-            <div class="p-card col-4">
-                <h3 class="p-heading--3">Diploma in Web Development</h3>
-                <p class="p-text--small-caps">Online Course</p>
-                <p class="p-text--small">Completed in 2021</p>
-            </div>
-            <div class="p-card col-4">
-                <h3 class="p-heading--3">Diploma in Web Development</h3>
-                <p class="p-text--small-caps">Online Course</p>
-                <p class="p-text--small">Completed in 2021</p>
+            <div class="p-card col-6 col-md-6 col-lg-3 u-no-padding">
+                <div class="p-card__content">
+                    <iframe class="p-card__image" style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FktO1Bu8ZKfMo0TITbK8vZb%2FApp-Dev%3Fpage-id%3D2%253A76%26type%3Ddesign%26node-id%3D66-674%26viewport%3D1553%252C-1477%252C0.64%26t%3DUo51HZEN79R1Sg0O-1%26scaling%3Dscale-down%26starting-point-node-id%3D66%253A674%26mode%3Ddesign" allowfullscreen></iframe>
+                    <div class="p-card__inner">
+                        <h3 class="p-heading--3">Campus Lost & Found App</h3>
+                        <p class="p-text">The Campus Lost & Found App is a comprehensive solution designed to streamline the process of retrieving lost items within educational institutions. With user-friendly interfaces accessible via mobile devices, students, faculty, and staff can easily report lost items, providing details such as description, location, and time of loss.</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -136,30 +138,17 @@
     <section class="p-strip is-dark" id="skills">
         <div class="row">
             <h2 class="p-heading--2">Skills</h2>
-            <div class="p-card col-4 is-dark">
-                <h3 class="p-heading--3">Bachelor of Science in Information Technology</h3>
-                <p class="p-card__content p-text--small-caps">Ateneo de Davao University</p>
-                <p class=" p-text--small">Graduated in 2022</p>
-            </div>
-            <div class="p-card col-4">
-                <h3 class="p-heading--3">Science Technology Engineering &amp; Mathematics</h3>
-                <p class="p-text--small-caps">Lyceum of the Philippines University-Cavite</p>
-                <p class="p-text--small">Completed in 2021</p>
-            </div>
-            <div class="p-card col-4">
-                <h3 class="p-heading--3">Diploma in Web Development</h3>
-                <p class="p-text--small-caps">Online Course</p>
-                <p class="p-text--small">Completed in 2021</p>
-            </div>
-            <div class="p-card col-4">
-                <h3 class="p-heading--3">Diploma in Web Development</h3>
-                <p class="p-text--small-caps">Online Course</p>
-                <p class="p-text--small">Completed in 2021</p>
-            </div>
-            <div class="p-card col-4">
-                <h3 class="p-heading--3">Diploma in Web Development</h3>
-                <p class="p-text--small-caps">Online Course</p>
-                <p class="p-text--small">Completed in 2021</p>
+            <div class="p-card col-12 col-md-6 col-lg-3 u-no-padding">
+                <div class="p-card__inner">
+                    <h3 class="p-heading--3">PROGRAMMING LANGUAGES &amp; TOOLS</h3>
+                    <div class="col-12">
+                        <i class="fab fa-html5"></i>
+                        <i class="fa-brands fa-css3-alt"></i>
+                        <i class="fa-brands fa-python"></i>
+                        <i class="fa-brands fa-java"></i>
+                        <i class="fa-brands fa-js"></i>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
