Update personal information and education section

--- a/index.html
+++ b/index.html
@@ -66,7 +66,10 @@
                     <h1 class="p-heading--1 u-no-margin is-accent" >CHRIS MAYNARD AMPON</h1>
                     <h5 class="p-heading--5 u-text--muted">BSIT 2A</h5>
                     <p class="p-text">
-                        Hello! I'm Chris Maynard Ampon, a software engineer passionate about crafting innovative solutions. With a decade of experience and a degree from Stanford University, I specialize in full-stack development and data analytics. I thrive on collaborating with diverse teams to tackle complex challenges. Let's connect and explore how we can create something remarkable together.
+                        Hello! I'm Chris Maynard Ampon, a second-year student pursuing a Bachelor's degree in Information Technology.
+                        Despite being early in my academic journey, I'm eager to grow, collaborate, and contribute meaningfully to the tech industry.
+                        My goal is to leverage my education and experiences to make a positive impact in the field of technology.
+                        Let's connect and explore how we can create something remarkable together.
                     </p>
                     <div class="col-12">
                         <a class="p-icon--github" href="https://github.com/chrismaynardampon" target="_blank">GitHub</a>
@@ -84,22 +87,22 @@
     <section class="p-strip is-dark u-equal-height" id="education">
         <div class="row">
             <h2 class="p-heading--2"> Education</h2>
-            <div class="p-card col-12 col-md-6 col-lg-3">
+            <div class="p-card col-6 col-md-6 col-lg-3">
                 <h3 class="p-heading--3">Bachelor of Science in Information Technology</h3>
                 <p class="p-text--small-caps">Ateneo de Davao University</p>
                 <p class=" p-text--small">2022 - Present</p>
             </div>
-            <div class="p-card col-12 col-md-6 col-lg-3">
+            <div class="p-card col-6 col-md-6 col-lg-3">
                 <h3 class="p-heading--3">Science Technology Engineering &amp; Mathematics</h3>
                 <p class="p-text--small-caps">Lyceum of the Philippines University-Cavite</p>
                 <p class="p-text--small u-align-text--small-to-default">2019 - 2021</p>
             </div>
-            <div class="p-card col-12 col-md-6 col-lg-3">
+            <div class="p-card col-6 col-md-6 col-lg-3">
                 <h3 class="p-heading--3">Junior High School</h3>
                 <p class="p-text--small-caps">Tagum City National HighSchool</p>
                 <p class="p-text--small">2015 - 2019</p>
             </div>
-            <div class="p-card col-12 col-md-6 col-lg-3">
+            <div class="p-card col-6 col-md-6 col-lg-3">
                 <h3 class="p-heading--3">Grade School</h3>
                 <p class="p-text--small-caps">Banaybanay Central Elementary School</p>
                 <p class="p-text--small">2009 - 2015</p>
@@ -117,10 +120,6 @@
                         <h3 class="p-heading--3">ECOFI Inc.</h3>
                         <p class="p-text">One of the UI designers of the Evangelical Christian Outreach Fellowship International Incorporated (ECOFI Inc.) website, which is a Religious Institution who's passion is for God and has compassion for the lost.</p>
                     </div>
-                <!-- <hr class="u-no-margin--bottom">
-                <div class="p-card__inner">
-                    by <a href="#">Bartek Szopka</a> on 21st August 2021
-                </div> -->
                 </div>
             </div>
             <div class="p-card col-6 col-md-6 col-lg-3 u-no-padding">
@@ -138,9 +137,11 @@
     <section class="p-strip is-dark" id="skills">
         <div class="row">
             <h2 class="p-heading--2">Skills</h2>
+            <!-- <div class="col-3"></div> -->
             <div class="p-card col-12 col-md-6 col-lg-3 u-no-padding">
-                <div class="p-card__inner">
-                    <h3 class="p-heading--3">PROGRAMMING LANGUAGES &amp; TOOLS</h3>
+                <div class="p-card__inner u-align--center">
+                    <h3 class="p-heading--3" style="max-width: 100%;">PROGRAMMING LANGUAGES &amp; TOOLS</h3>
+                    
                     <div class="col-12">
                         <i class="fab fa-html5"></i>
                         <i class="fa-brands fa-css3-alt"></i>
@@ -150,6 +151,7 @@
                     </div>
                 </div>
             </div>
+            <!-- <div class="col-3"></div> -->
         </div>
     </section>
     <footer class="l-footer--sticky p-strip is-paper" >
